edit, add nbvewer url.

--- a/hanoi.ipynb
+++ b/hanoi.ipynb
@@ -38,7 +38,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- [GitHub](https://github.com/Cartman0/TowerOfHanoiProblem)"
+    "- [GitHub this](https://github.com/Cartman0/TowerOfHanoiProblem)\n",
+    "- [nbviewer this](http://nbviewer.jupyter.org/github/Cartman0/TowerOfHanoiProblem/blob/master/hanoi.ipynb)"
    ]
   },
   {
@@ -450,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"hanoi_flow_activity.svg\" width=\"40%\">"
+    "<img src=\"hanoi_flow_activity.svg\" width=\"30%\">"
    ]
   },
   {
